--- a/training/training.Rmd
+++ b/training/training.Rmd
@@ -1,32 +1,32 @@
 ---
 title: "Modelling and forecasting deforestation"
-author: "Nify Antitra"
-date: "30 Octobre 2018"
+author: "Ghislain Vieilledent"
+date: "`r format(Sys.time(),'%B %e, %Y')`"
 output:
-  html_notebook:
+  bookdown::html_book:
     highlight: tango
     number_sections: no
     theme: spacelab
     toc: yes
     toc_float: yes
-  html_document:
-    df_print: paged
-    toc: yes
 bibliography: bib/biblio.bib
 biblio-style: bib/journal-of-applied-ecology.csl
 ---
 
-```{r setup, include=FALSE}
-setwd("/home/ghislain/Code/forecasting-deforestation-Mada")
+```{r setup, echo=FALSE, message=FALSE}
 library(knitr)
-knitr::opts_chunk$set(
+opts_chunk$set(
+  fig.align="center",
+  fig.retina=2,
+  fig.width=10,
 	echo=TRUE,
 	message=FALSE,
 	warning=FALSE,
-	cache=FALSE
+	cache=TRUE,
+	cache.lazy=FALSE 
 )
-knitr::opts_knit$set(
-  root.dir=getwd()
+opts_knit$set(
+  root.dir=normalizePath("../")
 )
 ```
 
@@ -81,7 +81,7 @@ Note on docker's containers and images:
 - List running containers: `docker ps`
 - List images: `docker images` or `docker image list`
 - Stop container: `docker stop <id container>`
-- Remove container `docker rm <idcontainer>`
+- Remove container: `docker rm <idcontainer>`
 
 ### Get the tutorial
 
@@ -96,7 +96,7 @@ In the preambule, change the author and date with your name and today's date.
 
 ### R libraries
 
-```{r R_libraries}
+```{r R_libraries, cache=FALSE}
 # Environmental variables
 Sys.unsetenv("DISPLAY") # Remove DISPLAY for Python plot
 
@@ -111,16 +111,17 @@ require(raster)
 require(rasterVis)
 require(rgdal)
 require(leaflet)
+require(kableExtra)
 ```
 
 ```{r source_R}
 # Source R plotting functions
-source("R/dfp_plot.R")
+source("R/far_plot.R")
 ```
 
 ### Python in R
 
-Specify the Python version to use and check that it is the right one.
+Specify the Python version to use with reticulate and check that it is the right one.
 
 ```{r python_path}
 use_python("/usr/bin/python3.5")
@@ -129,12 +130,11 @@ py_config()
 
 Import the Python modules into R.
 
-```{r importpy}
+```{r importpy, cache=FALSE}
 far <- import("forestatrisk")
 patsy <- import("patsy")
 sm <- import("statsmodels.api")
 smf <- import("statsmodels.formula.api")
-
 ```
 
 ### R/Python intro
@@ -198,7 +198,6 @@ plot(x.seq,y.seq,col=grey(0.7),
 lines(x.pred,Y.pred[,1],col="red",lwd=3)
 lines(x.pred,Y.pred[,2],col="blue",lwd=2,lty=2)
 lines(x.pred,Y.pred[,3],col="blue",lwd=2,lty=2)
-
 ```
 
 #### Python
@@ -210,14 +209,9 @@ lines(x.pred,Y.pred[,3],col="blue",lwd=2,lty=2)
 
 ##### Some exercises
 
-You can execute Python code within a R notebooks. We first need to indicate which version of Python to use in the notebook for Python chunk.
+You can execute Python code within a R notebooks. We need to indicate which version of Python to use in the notebook for Python chunk.
 
-```{r python_R}
-Sys.setenv(PATH=paste("/usr/bin/python3",
-           Sys.getenv("PATH"), sep=":"))
-```
-
-```{python}
+```{python example, engine.path="/usr/bin/python3"}
 import numpy as np
 a = np.array([20,5,6,2,9,12])
 b = 1
@@ -233,12 +227,11 @@ print(c)
 To model the spatial probability of deforestation, we need a map of the past deforestation and maps of potential explicative environmental variables. Environmental variables can be derived from topography (altitude and slope), accessibility (distance to roads, towns, and forest edge), deforestation history (distance to previous deforestation) or landscape policy (protected area network) for example. In our example, we use the following variables :
 
 ```{r variables}
-#library(kableExtra)
 tab1 <- read.table("training/tables/variables.txt",sep=",",header=TRUE)
 names(tab1) <- c("Product","Source","Variable derived","Unit","Resolution (m)")
 # Kable
-knitr::kable(tab1, linesep="") #%>%
-  #kable_styling(bootstrap_options = c("striped"))
+knitr::kable(tab1, linesep="") %>%
+  kable_styling(bootstrap_options = c("striped"))
 ```
 
 1. <http://bioscenemada.cirad.fr>, deforestation maps from @Vieilledent2018
@@ -282,7 +275,6 @@ if (!file.exists("data/mada/mada38s.shp")) {
   curl_download(f, "data/mada/mada38s.zip", quiet=FALSE)
   unzip("data/mada/mada38s.zip", exdir="data/mada")
 }
-
 ```
 
 In our example, `fordefor2010.tif` is a forest raster at 30m for the year 2010 considering the deforestation on the period 2000-2010 in Madagascar. We can plot this raster and zoom on a region with function `.plot.forest()` in the `forestatrisk` package to see the deforestation data. The remaining forest appears in green and the deforested areas appear in red.
@@ -310,7 +302,7 @@ The `.sample()` function also extracts information from environmental variables 
 
 The `.sample()` function identifies the spatial cell for each sample point (sample point are grouped within a spatial cell). Spatial cells and grouped observations are used to estimate the spatial autocorrelation of the deforestation process. The `csize` argument define the width (in km) of the square spatial cells. Each spatial cell will be attributed a parameter. To avoid estimating too many parameters, width of the square spatial cells must be sufficiently large. Both points sampling and extraction of environmental data are done by block to avoid memory problems for big datasets.
 
-```{python}
+```{python help, engine.path="/usr/bin/python3"}
 import forestatrisk
 help(forestatrisk.sample)
 ```
@@ -501,7 +493,7 @@ mod_binomial_iCAR <- far$model_binomial_iCAR(
 
 Once the model has been fitted, we can print a summary of the model showing the parameter estimates. The 95% credible intervals obtained from the posterior distribution of each parameter, except distance to nearest town (`dist_town`), do not include zero, indicating that parameters are significantly different from zero. The variance of the spatial random effects (`Vrho`) is given together with the deviance value, which can be used to compare different statistical models (lower deviance is better). Looking at the parameter estimates, we can see that the deforestation probability is much lower inside protected areas and that deforestation probability decreases with altitude, slope, distance to past deforestation, forest edge, roads and towns. Parameter values are then coherent regarding the deforestation process and easy to interpret.
 
-```{r}
+```{r summary_iCAR}
 sink(file="output/summary_mod_binomial_iCAR.txt")
 print(mod_binomial_iCAR)
 sink()
@@ -561,21 +553,25 @@ rho_plot(r.rho, mada, output_file="output/rho_ggplot.png",
 The `.predict_raster_binomial_iCAR()` function of the `forestatrisk` module can be used to predict the spatial probability of deforestation from an **hSDM_binomial_iCAR** model (i.e. an object of class `hSDM_binomial_iCAR`). The function writes a raster of predictions to the disk. The prediction is done by block to avoid memory problems for big datasets. Functions will return NA for pixels with no forest or for pixels with missing environmental variables.
 
 ```{r compute_predictions}
-far$predict_raster_binomial_iCAR(
-  mod_binomial_iCAR, var_dir="data/model",
-  input_cell_raster="output/rho.tif",
-  input_forest_raster="data/model/fordefor2010.tif",
-  output_file="output/pred_binomial_iCAR.tif",
-  blk_rows=128L)
+if (!file.exists("output/prob_binomial_iCAR.tif")) {
+  far$predict_raster_binomial_iCAR(
+    mod_binomial_iCAR, var_dir="data/model",
+    input_cell_raster="output/rho.tif",
+    input_forest_raster="data/model/fordefor2010.tif",
+    output_file="output/prob_binomial_iCAR.tif",
+    blk_rows=128L)
+}
 ```
 
 The raster of predictions can then be plotted.
 
 ```{r plot_predictions}
-fig <- far$plot$prob("output/pred_binomial_iCAR.tif",
-                     output_file="output/pred_binomial_iCAR.png",
-                     figsize=c(4,4))
-knitr::include_graphics("output/pred_binomial_iCAR.png")
+if (!file.exists("output/prob_binomial_iCAR.png")) {
+  fig <- far$plot$prob("output/prob_binomial_iCAR.tif",
+                       output_file="output/prob_binomial_iCAR.png",
+                       figsize=c(4,4))
+}
+knitr::include_graphics("output/prob_binomial_iCAR.png")
 ```
 
 ### Predicting future forest cover
@@ -585,23 +581,28 @@ Given the spatial probability of deforestation and the number of hectares that s
 In our example, we consider an annual deforestation of roughly 100,000 ha for Madagascar. Considering the period 2010-2050, this would correspond to 4 Mha of deforestation. This number can of course be more precise and refined considering various deforestation scenarios (demographic growth, economic development, etc.).
 
 ```{r compute_future_forest_cover, results="hide"}
-deforest <- far$deforest(input_raster="output/pred_binomial_iCAR.tif",
-                         hectares=4000000,
-                         output_file="output/forest_cover_2050.tif",
-                         blk_rows=128L)
+if (!file.exists("output/forest_cover_2050.tif")) {
+  deforest <- far$deforest(input_raster="output/prob_binomial_iCAR.tif",
+                           hectares=4000000,
+                           output_file="output/forest_cover_2050.tif",
+                           blk_rows=128L)
+}
 ```
 
 We can plot the predicted future forest cover in 2050 with [leaflet](http://rstudio.github.io/leaflet/). We first reproject the raster to WGS 84 / World Mercator projection ([EPSG:3857](http://spatialreference.org/ref/sr-org/7483/)) and we resample the map at 250 m using function `gdalwarp` from `GDAL`. The 250 m resolution raster that can be transformed into a lower size image that can be plotted with leaflet.
 
-```{bash}
-gdalwarp -overwrite -s_srs EPSG:32738 -t_srs EPSG:3857 -tr 250 250 \
+```{bash resample}
+if [ ! -f output/forest_cover_2050_epsg3857_ov32.tif ]
+then
+  gdalwarp -overwrite -s_srs EPSG:32738 -t_srs EPSG:3857 -tr 250 250 \
          -ot Byte -r near -co "COMPRESS=LZW" -co "PREDICTOR=2" -co "BIGTIFF=YES" \
          output/forest_cover_2050.tif output/forest_cover_2050_epsg3857_ov32.tif
+fi
 ```
 
 We also set the color of the map and the extent of the view for leaflet.
 
-```{r}
+```{r col_leaflet}
 # Colors and extent view for leaflet
 r <- raster("output/forest_cover_2050_epsg3857_ov32.tif")
 pal <- colorFactor(c("red", "darkgreen"), c(0,1), na.color = "transparent")
@@ -672,6 +673,8 @@ Considering the period 2010-2017, we can compare model's predictions in the futu
 First, we compute the observed forest cover change raster on the period 2010-2017 from the forest cover in 2010 and 2017.
 
 ```{bash}
+if [ ! -f output/fcc_2010_2017_obs.tif ]
+then
 # Set nodata different from 255
 gdal_translate -a_nodata 99 -co 'COMPRESS=LZW' -co 'PREDICTOR=2' \
                data/model/fordefor2010.tif output/fordefor2010_.tif
@@ -681,7 +684,7 @@ gdal_translate -a_nodata 99 -co 'COMPRESS=LZW' -co 'PREDICTOR=2' \
                
 # Compute forest-cover change between 2010 and 2017
 gdal_calc.py --overwrite -A output/fordefor2010_.tif -B output/for2017_.tif --outfile=output/fcc_2010_2017_obs.tif --type=Byte --calc='255-254*(A==1)*(B==1)-255*(A==1)*(B==255)' --co 'COMPRESS=LZW' --co 'PREDICTOR=2' --NoDataValue=255
-
+fi
 ```
 
 We compute the deforested area on the period 2010-2017.
@@ -703,10 +706,12 @@ Note: Because forest covers about 9.3 Mha in 2010 [@Vieilledent2018], this corre
 
 ```{r fcc_2010_2017_iCAR, echo=TRUE, results="hide"}
 # Model predictions 2010-2017
-fcc_iCAR_2017 <- far$deforest(input_raster="output/pred_binomial_iCAR.tif",
-                              hectares=count_d$area,
-                              output_file="output/fcc_2010_2017_iCAR.tif",
-                              blk_rows=128L)
+if (!file.exists("output/fcc_2010_2017_iCAR.tif")) {
+  fcc_iCAR_2017 <- far$deforest(input_raster="output/prob_binomial_iCAR.tif",
+                                hectares=count_d$area,
+                                output_file="output/fcc_2010_2017_iCAR.tif",
+                                blk_rows=128L)
+}
 ```
 
 Third, we compute the indices based on the two maps.
@@ -723,7 +728,9 @@ as.data.frame(indices_2010_2017_iCAR)
 ### Model types
 
 - null model
-- nsre model: no spatial random effect model
+- glm model: simple glm with no spatial random effect model
+- rf model: random forest model with no x,y
+- rfxy: random forest model with x,y
 
 ```{r null_model}
 # Null model
@@ -737,32 +744,47 @@ print(mod_null$summary())
 ```
 
 
-```{r nsre_model}
-# Model nsre with no spatial random effects
-formula_nsre <- paste0("I(1-fordefor2010) ~ C(sapm) + scale(altitude) + ",
+```{r glm_model}
+# Simple glm with no spatial random effects
+formula_glm <- paste0("I(1-fordefor2010) ~ C(sapm) + scale(altitude) + ",
                        "scale(slope) + scale(dist_defor) + I(scale(dist_defor)*scale(dist_defor)) + ",
                        "scale(dist_edge) + scale(dist_road) + scale(dist_town)")
-mod_nsre <- smf$glm(formula_nsre, r_to_py(data_train), family=sm$families$Binomial(), eval_env=-1L)$fit()
-# Summary nsre
-sink(file="output/summary_mod_binomial_nsre.txt")
-print(mod_nsre$summary())
+mod_glm <- smf$glm(formula_glm, r_to_py(data_train), family=sm$families$Binomial(), eval_env=-1L)$fit()
+# Summary glm
+sink(file="output/summary_mod_binomial_glm.txt")
+print(mod_glm$summary())
 sink()
-print(mod_nsre$summary())
+print(mod_glm$summary())
 
 ```
 
+```{r rf_model}
+source_python("Python/model_random_forest.py")
+formula_rf <- paste0("I(1-fordefor2010) ~ sapm + altitude + ",
+                     "slope + dist_defor + dist_edge + dist_road + dist_town")
+
+mod_rf <- model_random_forest(formula=formula_rf, data=data_train, 
+                              eval_env=-1L, n_estimators=500L, n_jobs=2L)
+```
+
+```{r rfxy_model}
+formula_rf_xy <- paste0("I(1-fordefor2010) ~ sapm + altitude + ",
+                        "slope + dist_defor + dist_edge + dist_road + dist_town + X + Y")
+mod_rf_xy <- model_random_forest(formula=formula_rf_xy, data=data_train, 
+                                 eval_env=-1L, n_estimators=500L, n_jobs=2L)
+```
 
 ### Deviance explained
 
 ```{r deviance}
 # Deviances
 deviance_null <- mod_null$deviance
-deviance_nsre <- mod_nsre$deviance
+deviance_glm <- mod_glm$deviance
 deviance_icar <- mod_binomial_iCAR$deviance
 deviance_full <- 0
 # Table
-dev <- c(deviance_null, deviance_nsre, deviance_icar, deviance_full)
-mod_dev <- data.frame(model=c("null", "nsre", "icar", "full"),
+dev <- c(deviance_null, deviance_glm, deviance_icar, deviance_full)
+mod_dev <- data.frame(model=c("null", "glm", "icar", "full"),
                   deviance=round(dev))
 perc <- 100*(1-mod_dev$deviance/deviance_null)
 mod_dev$perc <- round(perc)
@@ -770,38 +792,67 @@ write.table(mod_dev,file="output/deviance_model_comparison.txt",sep=",",row.name
 mod_dev
 ```
 
-
 ### Spatial validation
 
-```{r perf_nsre}
-# Performance nsre
-performance_nsre <- performance_index(data_valid,mod_nsre)
-performance_nsre
+```{r perf_models}
+performance_null <- performance_index(data_valid,model="null")
+performance_glm <- performance_index(data_valid,mod_glm)
+performance_rf <- performance_index(data_valid,mod_rf)
+performance_rf_xy <- performance_index(data_valid,mod_rf_xy)
+# Save
+write.table(performance_null, file="output/performance_null.txt", sep="\t", row.names=FALSE)
+write.table(performance_glm, file="output/performance_glm.txt", sep="\t", row.names=FALSE)
+write.table(performance_rf, file="output/performance_rf.txt", sep="\t", row.names=FALSE)
+write.table(performance_rf_xy, file="output/performance_rf_xy.txt", sep="\t", row.names=FALSE)
+write.table(performance_iCAR, file="output/performance_iCAR.txt", sep="\t", row.names=FALSE)
+# Save for perc=10%
+df_mod_valid <- rbind(performance_null[3,],performance_glm[3,],
+                      performance_rf[3,],performance_rf_xy[3,],
+                      performance_iCAR[3,])
+df_mod_valid <- df_mod_valid %>%
+  dplyr::mutate(mod=c("null","glm","rf","rf_xy","iCAR")) %>%
+  dplyr::select(10,2:9)
+write.table(df_mod_valid, file="output/df_mod_valid.txt", sep="\t", row.names=FALSE)
+
+# Print
+df_mod_valid
 ```
 
 ### Temporal validation
 
 #### Compute raster of probabilities
 
-Model (nsre) + environmental variables (raster) => probabilities
+Models + environmental variables (raster) => probabilities
 
-```{r prob_nsre}
-# Compute predictions with logistic regression
-fig_pred_nsre <- far$predict_raster(mod_nsre, var_dir="data/model",
-                                    input_forest_raster="data/model/fordefor2010.tif",
-                                    output_file="output/pred_nsre.tif",
-                                    blk_rows=128L, transform=TRUE)
+```{r prob_glm}
+if (!file.exists("output/prob_glm.tif")) {
+  # Compute predictions with logistic regression
+  fig_prob_glm <- far$predict_raster(mod_glm, var_dir="data/model",
+                                     input_forest_raster="data/model/fordefor2010.tif",
+                                     output_file="output/prob_glm.tif",
+                                     blk_rows=128L, transform=TRUE)
+}
 ```
 
-#### Predicted fcc with nsre
+```{r prob_rf_xy}
+if (!file.exists("output/prob_rfxy.tif")) {
+  # Compute predictions with logistic regression
+  fig_prob_rfxy <- far$predict_raster(mod_rf_xy, var_dir="data/model",
+                                      input_forest_raster="data/model/fordefor2010.tif",
+                                      output_file="output/prob_rf_xy.tif",
+                                      blk_rows=128L, transform=TRUE)
+}
+```
+
+#### Predicted fcc with glm
 
 Probabilities (raster) + deforested areas 2010-2017 (871336 ha) => prediction of forest cover change (fcc) 2010-2017
 
-```{r fcc_2010_2017_nsre, results="hide"}
+```{r fcc_2010_2017_glm, results="hide"}
 # Model predictions 2010-2017
-fcc_nsre_2017 <- far$deforest(input_raster="output/pred_nsre.tif",
+fcc_glm_2017 <- far$deforest(input_raster="output/prob_glm.tif",
                               hectares=count_d$area,
-                              output_file="output/fcc_2010_2017_nsre.tif",
+                              output_file="output/fcc_2010_2017_glm.tif",
                               blk_rows=128L)
 ```
 
@@ -809,24 +860,24 @@ fcc_nsre_2017 <- far$deforest(input_raster="output/pred_nsre.tif",
 
 fcc_pred + fcc_obs => confusion matrix => performance indices
 
-```{r indices_2010_2017_nsre}
-indices_2010_2017_nsre <- far$validation(pred="output/fcc_2010_2017_nsre.tif",
+```{r indices_2010_2017_glm}
+indices_2010_2017_glm <- far$validation(pred="output/fcc_2010_2017_glm.tif",
                                          obs="output/fcc_2010_2017_obs.tif",
                                          blk_rows=128L)
-as.data.frame(indices_2010_2017_nsre)
+as.data.frame(indices_2010_2017_glm)
 ```
 
 ### Differences in projections in 2050
 
-Objective: compare predictions in 2050 for iCAR and nsre
+Objective: compare predictions in 2050 for iCAR and glm
 
-#### Predictions in 2050 of nsre
+#### Predictions in 2050 of glm
 
-```{r fcc_2010_2050_nsre, results="hide"}
+```{r fcc_2010_2050_glm, results="hide"}
 # Model predictions 2010-2017
-fcc_nsre_2050 <- far$deforest(input_raster="output/pred_nsre.tif",
+fcc_glm_2050 <- far$deforest(input_raster="output/prob_glm.tif",
                               hectares=4000000,
-                              output_file="output/fcc_2010_2050_nsre.tif",
+                              output_file="output/fcc_2010_2050_glm.tif",
                               blk_rows=128L)
 ```
 
@@ -837,8 +888,8 @@ We compute the differences between the two rasters
 ```{r rast_diff, results="hide"}
 # Raster of differences
 far$differences(inputA = "output/forest_cover_2050.tif",
-                inputB = "output/fcc_2010_2050_nsre.tif",
-                output_file = "output/diff_iCAR_nsre_2050.tif",
+                inputB = "output/fcc_2010_2050_glm.tif",
+                output_file = "output/diff_iCAR_glm_2050.tif",
                 blk_rows = 1L)
 
 ```
@@ -846,11 +897,10 @@ far$differences(inputA = "output/forest_cover_2050.tif",
 We plot the differences
 
 ```{r plot_diff}
-far$plot$differences("output/diff_iCAR_nsre_2050.tif",
+far$plot$differences("output/diff_iCAR_glm_2050.tif",
                      borders = "data/mada/mada38s.shp",
-                     output_file = "output/diff_iCAR_nsre_2050.png")
-knitr::include_graphics("output/diff_iCAR_nsre_2050.png")
+                     output_file = "output/diff_iCAR_glm_2050.png")
+knitr::include_graphics("output/diff_iCAR_glm_2050.png")
 ```
-
 
 ## References
